# anilife-dl

./: .gitignore  .log.tmp  Cargo.toml  Makefile  README.md  api.go  client.go  go.mod  go.sum  install.bat  main.go  out.txt
src/: api.rs  cli.rs  crypto.rs  dl.rs  http.rs  lib.rs  main.rs  upload.rs  video.rs
