[package]
name = "anilife-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
scraper = "0.17.1"
regex = "1.9.3"
base64 = "0.21.2"
log = "0.4.20"
log2 = "0.1.7"
futures="0.3.28"
inquire = "0.6.2"